--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "build": "electron-packager --out winx64 --overwrite --platform win32 --appname clientlmcenter . --icon=./shops.ico"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
